# Ti2022-B-CV

./: CMakeLists.txt  main.cpp  process-daemon.sh
asset/: asset-define.hpp  config.ini
include/camera/: camera-stream.hpp
include/identify/: identify-shape.hpp  identify-tools.hpp
include/serial/: serial-port.hpp
include/switch/: switch-control.hpp  switch-read-config.hpp
src/Identify/: identify-shape.cpp
src/camera/: camera-stream.cpp
src/serial/: serial-port.cpp
src/switch/: switch-control.cpp
tools/: tools-config.hpp
